// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies the styles recursively 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      bold and red text
    </Text>
  </Text>
</Text>
`;

exports[`renders with additional style properties 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    bold text
  </Text>
</Text>
`;

exports[`renders with the default properties for iOS 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    normal text
  </Text>
</Text>
`;

exports[`supports multiple nested strings 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      red normal text 
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      and red normal text
    </Text>
  </Text>
</Text>
`;

exports[`supports nested styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    bold text 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      and bold-red text
    </Text>
  </Text>
</Text>
`;

exports[`works even with the distant Text nodes 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      bold default text
    </Text>
  </Text>
</Text>
`;
